Webpage Commit (Most Featuers done)

--- a/index.Rmd
+++ b/index.Rmd
@@ -5,9 +5,12 @@ description: |
 date: December 20, 2019
 author:
   - name: "Seungho (Samuel) Lee"
+    url: mailto:slee19@students.cmc.edu
     affiliation: Claremont McKenna College
   - name: "Priyanka Agarwal"
+    url: mailto:pagarwal@hmc.edu
     affiliation: Harvey Mudd College
+bibliography: biblio.bib
 site: distill::distill_website
 ---
 
@@ -34,21 +37,19 @@ if (length(install.me) >= 1) install.packages(install.me, repos = "http://cran.u
 lapply(mypacks, library, character.only=TRUE)  # load all packages
 ```
 
-```{r, echo = FALSE, layout = "l-screen"}
-knitr::include_app( "http://samuellee19.shinyapps.io/SFQ_Final_Project",height = "600px")
+```{r, echo = FALSE, layout = "l-screen-inset"}
+knitr::include_app( "http://samuellee19.shinyapps.io/SFQ_Final_Project")
 ```
 
 # Project Overview
 ## Background:
 The **Stop, Question and Frisk** program is a practice, utilized by New York City Police Department (NYPD), of temporarily halting, questioning, and, in certain cases, searching civilians on the street for weapons and other dangers. It is also called "Terry Stop," named after the Supreme Court case Terry v. Ohio (1968).
 
-The use of **Stop, Question and Frisk** practice is often endorsed with the Broken Windows Theory, suggesting that even **low-level crimes and civil disorder leads to more serious crimes in urban enviornments.** In fact, after NYPD officer Adrian Schoolcraft made extensive recordings on the department's Stop and Frisk policy, numerous civil rights organizations, such as NYCLU, raised a concern that the program **unfairly targest certain minorities, such as African-Americans and Hispanic-Americans**. 
+The use of **Stop, Question and Frisk** practice is often endorsed with the Broken Windows Theory, suggesting that even **low-level crimes and civil disorder leads to more serious crimes in urban enviornments.** In fact, after NYPD officer Adrian Schoolcraft made extensive recordings on the department's Stop and Frisk policy, numerous civil rights organizations, such as NYCLU, raised a concern that the program **unfairly targest certain minorities, such as African-Americans and Hispanic-Americans**. Similarly, the Guardian reporter also noted that "since 2002 (the Kelly/Bloomberg years), over 35% of officers feel high pressure to write stop-and-frisk reports...felt less pressire to obey consitutional constraints."[@eterno_silverman_2013] 
 
-A major turning point was the 2013 court case Floyd v. City of New York and a subsequent NYPD mandate that requires officers to thoroughly justify the reason for making a stop.[34] In 2013, 191,558 stops were made.[35]
+A major turning point was the 2013 court case Floyd v. City of New York and a subsequent NYPD mandate that requires officers to thoroughly justify the reason for making a stop. After Bloomberg's mayorship ended, Bill de Blasio took over the office and pledged for a major reform on NYPD policies. 
 
-- 2013 DeBlasio took over and pledged major reform
-- 2008, state judge ruled that they'd have to publicly release information
-- Determine changes from 2003-2007, 2007-2012, then 2013-2016
+For this project, we will be using New York City data on Stop and Frisk practice, from 2003 to 2018. Due to formatting changes happened circa 2017, data from 2017-2018 period will be limited to visualization process. Hence, we will determine changes from 2003-2007, 2007-2012, and 2013-2016 periods.
 
 ## Project Objectives:
 1. Visualize the data to get intuit
@@ -60,7 +61,7 @@ A major turning point was the 2013 court case Floyd v. City of New York and a su
 
 ----------------
 
-# Methodology
+# Methodologies
 ## Data Used
 1. Crime Analysis
 2. Policy Analysis
@@ -69,213 +70,18 @@ A major turning point was the 2013 court case Floyd v. City of New York and a su
 - Combine data with crime rates per precinct for previous year, because you'd expect more unsafe areas to have more stop and frisk/safety patrolling, see trend between stop and frisk and crime rate of area
 - See further what drives stop and frisk between areas by splitting it up by era and seeing main variables
 
-```{r, tidy=FALSE, echo = FALSE}
-# Samuel's Part
-SQF1718 <- read_csv("https://github.com/samuellee19/econ122_sqf/raw/master/Data%20Files%20Only/SQF1718.csv")
-
-# Priyanka's Part
-url <- "https://www.nyclu.org/sites/default/files/field_documents/2018_sqf_database.xlsx"
-destfile <- "2018_sqf_database.xlsx"
-curl::curl_download(url, destfile)
-# Create a vector of Excel files to read
-files.to.read = list.files(pattern="xlsx")
-
-# Read each file and write it to csv
-library("rio")
-xls <- dir(pattern = "xlsx")
-created <- mapply(convert, xls, gsub("xlsx", "csv", xls))
-unlink(xls) # delete xlsx files
-SQF2018 <- read.csv("2018_sqf_database.csv")
-
-
-url <- "https://www1.nyc.gov/assets/nypd/downloads/excel/analysis_and_planning/stop-question-frisk/sqf-2017.xlsx"
-destfile <- "2017_sqf_database.xlsx"
-curl::curl_download(url, destfile)
-# Create a vector of Excel files to read
-files.to.read = list.files(pattern="xlsx")
-
-# Read each file and write it to csv
-library("rio")
-xls <- dir(pattern = "xlsx")
-created <- mapply(convert, xls, gsub("xlsx", "csv", xls))
-unlink(xls) # delete xlsx files
-SQF2017 <- read.csv("2017_sqf_database.csv")
-
-
-url <- "https://www.nyclu.org/sites/default/files/field_documents/2016_sqf_database.xlsx"
-destfile <- "2016_sqf_database.xlsx"
-curl::curl_download(url, destfile)
-# Create a vector of Excel files to read
-files.to.read = list.files(pattern="xlsx")
-
-# Read each file and write it to csv
-library("rio")
-xls <- dir(pattern = "xlsx")
-created <- mapply(convert, xls, gsub("xlsx", "csv", xls))
-unlink(xls) # delete xlsx files
-SQF2016 <- read.csv("2016_sqf_database.csv")
-
-url <- "https://www1.nyc.gov/assets/nypd/downloads/excel/analysis_and_planning/stop-question-frisk/sqf-2015.csv"
-destfile <- "sqf-2015.csv"
-curl::curl_download(url, destfile)
-SQF2015 <- read.csv(destfile)
-```
-
-```{r, echo = FALSE}
-url <- "https://www1.nyc.gov/assets/nypd/downloads/zip/analysis_and_planning/stop-question-frisk/sqf-2014-csv.zip"
-download(url, dest="dataset.zip", mode="wb")
-unzip ("dataset.zip", exdir = "./")
-destfile <- "2014.csv"
-SQF2014 <- read.csv(destfile)
-
-url <- "https://www1.nyc.gov/assets/nypd/downloads/zip/analysis_and_planning/stop-question-frisk/sqf-2013-csv.zip"
-download(url, dest="dataset.zip", mode="wb")
-unzip ("dataset.zip", exdir = "./")
-destfile <- "2013.csv"
-SQF2013 <- read.csv(destfile)
-
-url <- "https://www1.nyc.gov/assets/nypd/downloads/zip/analysis_and_planning/stop-question-frisk/sqf-2012-csv.zip"
-download(url, dest="dataset.zip", mode="wb")
-unzip ("dataset.zip", exdir = "./")
-destfile <- "2012.csv"
-SQF2012 <- read.csv(destfile)
-
-url <- "https://www1.nyc.gov/assets/nypd/downloads/zip/analysis_and_planning/stop-question-frisk/sqf-2011-csv.zip"
-download(url, dest="dataset.zip", mode="wb")
-unzip ("dataset.zip", exdir = "./")
-destfile <- "2011.csv"
-SQF2011 <- read.csv(destfile)
-
-url <- "https://www1.nyc.gov/assets/nypd/downloads/zip/analysis_and_planning/stop-question-frisk/sqf-2010-csv.zip"
-download(url, dest="dataset.zip", mode="wb")
-unzip ("dataset.zip", exdir = "./")
-destfile <- "2010.csv"
-SQF2010 <- read.csv(destfile)
-
-url <- "https://www1.nyc.gov/assets/nypd/downloads/zip/analysis_and_planning/stop-question-frisk/sqf-2009-csv.zip"
-download(url, dest="dataset.zip", mode="wb")
-unzip ("dataset.zip", exdir = "./")
-destfile <- "2009.csv"
-SQF2009 <- read.csv(destfile)
-
-url <- "https://www1.nyc.gov/assets/nypd/downloads/zip/analysis_and_planning/stop-question-frisk/sqf-2008-csv.zip"
-download(url, dest="dataset.zip", mode="wb")
-unzip ("dataset.zip", exdir = "./")
-destfile <- "2008.csv"
-SQF2008 <- read.csv(destfile)
-
-url <- "https://www1.nyc.gov/assets/nypd/downloads/zip/analysis_and_planning/stop-question-frisk/sqf-2007-csv.zip"
-download(url, dest="dataset.zip", mode="wb")
-unzip ("dataset.zip", exdir = "./")
-destfile <- "2007.csv"
-SQF2007 <- read.csv(destfile)
-
-url <- "https://www1.nyc.gov/assets/nypd/downloads/zip/analysis_and_planning/stop-question-frisk/sqf-2006-csv.zip"
-download(url, dest="dataset.zip", mode="wb")
-unzip ("dataset.zip", exdir = "./")
-destfile <- "2006.csv"
-SQF2006 <- read.csv(destfile)
-
-url <- "https://www1.nyc.gov/assets/nypd/downloads/zip/analysis_and_planning/stop-question-frisk/sqf-2005-csv.zip"
-download(url, dest="dataset.zip", mode="wb")
-unzip ("dataset.zip", exdir = "./")
-destfile <- "2005.csv"
-SQF2005 <- read.csv(destfile)
-
-url <- "https://www1.nyc.gov/assets/nypd/downloads/zip/analysis_and_planning/stop-question-frisk/sqf-2004-csv.zip"
-download(url, dest="dataset.zip", mode="wb")
-unzip ("dataset.zip", exdir = "./")
-destfile <- "2004.csv"
-SQF2004 <- read.csv(destfile)
-
-url <- "https://www1.nyc.gov/assets/nypd/downloads/zip/analysis_and_planning/stop-question-frisk/sqf-2003-csv.zip"
-download(url, dest="dataset.zip", mode="wb")
-unzip ("dataset.zip", exdir = "./")
-destfile <- "2003.csv"
-SQF2003 <- read.csv(destfile)
-
-url <- "https://www1.nyc.gov/assets/nypd/downloads/excel/analysis_and_planning/historical-crime-data/seven-major-felony-offenses-by-precinct-2000-2018.xls"
-destfile <- "crime_by_precinct.xls"
-curl::curl_download(url, destfile)
-```
-
-```{r, echo = FALSE}
-# Create a vector of Excel files to read
-files.to.read = list.files(pattern="xls")
-
-# Read each file and write it to csv
-library("rio")
-xls <- dir(pattern = "xls")
-created <- mapply(convert, xls, gsub("xls", "csv", xls))
-
-unlink(xls) # delete xlsx files
-CrimeRates <- read.csv("crime_by_precinct.csv", skip = 2)
-
-# Cleaning crime rate df
-library(data.table)
-setDT(CrimeRates)[, PCT:=PCT[1L] ,cumsum(PCT!="")]
-CrimeRates <- CrimeRates[CrimeRates$CRIME == "TOTAL SEVEN MAJOR FELONY OFFENSES",]
-yearsAll <- c('2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013', '2014', '2015', '2016', '2017', '2018')
-yearsHave <- c('2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013', '2014', '2015', '2016', '2017', '2018')
-
-colToDrop <- c('X2000', 'X2001', 'X2002', 'X2003', 'X2004', 'X2005', 'X2006', 'X2007', 'X2008', 'X2009', 'X2010', 'X2011', 'X2012', 'X2013', 'X2014', 'X2015', 'X2016', 'X2017', 'X2018', 'CRIME')
-CrimeRates$PCT <- as.numeric(CrimeRates$PCT)
-
-# Finding percentage change compared to previous year
-CrimeChangePercentage <- CrimeRates
-CrimeChangePercentage <- CrimeChangePercentage %>% mutate("2003" = log(X2003, 10)-log(X2002, 10)) %>% mutate("2004" = log(X2004, 10)-log(X2003, 10))%>% mutate("2005" = log(X2005, 10)-log(X2004, 10)) %>% mutate("2006" = log(X2006, 10)-log(X2005, 10)) %>% mutate("2007" = log(X2007, 10)-log(X2006, 10)) %>% mutate("2008" = log(X2008, 10)-log(X2007, 10)) %>% mutate("2009" = log(X2009, 10)-log(X2008, 10)) %>% mutate("2010" = log(X2010, 10)-log(X2009, 10)) %>% mutate("2011" = log(X2011, 10)-log(X2010, 10)) %>% mutate("2012" = log(X2012, 10)-log(X2011, 10)) %>% mutate("2013" = log(X2013, 10)-log(X2012, 10)) %>% mutate("2014" = log(X2014, 10)-log(X2013, 10)) %>% mutate("2015" = log(X2015, 10)-log(X2014, 10)) %>% mutate("2016" = log(X2016, 10)-log(X2015, 10)) %>% mutate("2017" = log(X2017, 10)-log(X2016, 10)) %>% mutate("2018" = log(X2018, 10)-log(X2017, 10))
-CrimeChangePercentage <- CrimeChangePercentage[, !colnames(CrimeChangePercentage) %in% colToDrop] %>% gather(yearsHave, key = "year", value = "crimeChange")
-CrimeChangePercentage$year <- as.numeric(CrimeChangePercentage$year)
-
-# Making new data set: Year, Borough, Crime Rate, Number of Stop and Frisks
-# Graph Crime Rate vs Number, for each Borough to see if they're actually correlated, color by year
-#Making values in terms of Standard Deviations by year
-CrimeRates <- CrimeRates %>% mutate("2000" = scale(X2000)) %>% mutate("2001" = scale(X2001)) %>% mutate("2002" = scale(X2002)) %>% mutate("2003" = scale(X2003)) %>% mutate("2004" = scale(X2004)) %>% mutate("2005" = scale(X2005)) %>% mutate("2006" = scale(X2006)) %>% mutate("2007" = scale(X2007)) %>% mutate("2008" = scale(X2008)) %>% mutate("2009" = scale(X2009)) %>% mutate("2010" = scale(X2010)) %>% mutate("2011" = scale(X2011)) %>% mutate("2012" = scale(X2012)) %>% mutate("2013" = scale(X2013)) %>% mutate("2014" = scale(X2014)) %>% mutate("2015" = scale(X2015)) %>% mutate("2016" = scale(X2016)) %>% mutate("2017" = scale(X2017)) %>% mutate("2018" = scale(X2018))
-CrimeRates <- CrimeRates[, !colnames(CrimeRates) %in% colToDrop] %>% gather(yearsAll, key = "year", value = "crimeSD")
-CrimeRates$year <- as.numeric(CrimeRates$year)
-```
-
-```{r, echo = FALSE}
-# Data frame creation for seeing if crime rate of previous year effects the stop and frisk amount
-SQF2017 <- SQF2017 %>% mutate('pct' = SQF2017$STOP_LOCATION_PRECINCT, 'year' = SQF2017$YEAR2)
-SQF2018 <- SQF2018 %>% mutate('pct' = SQF2018$STOP_LOCATION_PRECINCT, 'year' = SQF2018$YEAR2)
-CrimeRates <- CrimeRates %>% mutate(year = year+1)
-```
-
 ## Visualizations
 
-```{r, layout = "1-page", echo = FALSE, fig.height = 3}
-SQF1718 <- read_csv("https://github.com/samuellee19/CS5_Project/raw/master/SQF1718.csv")
-test_latlong <- SQF1718[!is.na(SQF1718$STOP_LOCATION_X),]
-test_latlong <- test_latlong[!is.na(test_latlong$STOP_LOCATION_Y),] %>%
-    select(STOP_FRISK_ID, STOP_FRISK_DATE, STOP_FRISK_TIME, YEAR2, MONTH2, DAY2, STOP_WAS_INITIATED, SUSPECTED_CRIME_DESCRIPTION, SUSPECT_ARREST_OFFENSE, SUSPECT_RACE_DESCRIPTION, STOP_LOCATION_X, STOP_LOCATION_Y)
+For this project, we mostly used `library(mapdeck)` to create **screengrid** and **hexagon objects** to show density of Stop and Frisk events across our timeline, as you can see from the above dashboard. 
 
-# creating data as sf object
-plot_locations_sp <- test_latlong
-coordinates(plot_locations_sp) <- ~STOP_LOCATION_X + STOP_LOCATION_Y
-
-proj4string(plot_locations_sp) <- CRS('+init=epsg:2263 +proj=lcc +lat_1=41.03333333333333 +lat_2=40.66666666666666 +lat_0=40.16666666666666 +lon_0=-74 +x_0=300000.0000000001 +y_0=0 +datum=NAD83 +units=us-ft +no_defs +ellps=GRS80 +towgs84=0,0,0')
-
-plot_locations_sp <- plot_locations_sp %>% spTransform(CRS("+init=epsg:4326"))
-
-plot_locations_sp <- st_as_sf(plot_locations_sp, coords = c("STOP_LOCATION_X", "STOP_LOCATION_Y"), crs = utm18nCRS)
-
-# dividing the sf object into "Seven Major Felony Offenses" (NYC)
-plot_locations_sf <- test_latlong %>%
-    filter(SUSPECT_ARREST_OFFENSE %in% c("GRAND LARCENY", "ROBBERY", "BURGLARY", "ASSAULT", "RAPE", "TERRORISM", "GRAND LARCENY AUTO", "AUTO STRIPPING", "MURDER"))
-
-coordinates(plot_locations_sf) <- ~STOP_LOCATION_X + STOP_LOCATION_Y
-
-proj4string(plot_locations_sf) <- CRS('+init=epsg:2263 +proj=lcc +lat_1=41.03333333333333 +lat_2=40.66666666666666 +lat_0=40.16666666666666 +lon_0=-74 +x_0=300000.0000000001 +y_0=0 +datum=NAD83 +units=us-ft +no_defs +ellps=GRS80 +towgs84=0,0,0')
-
-plot_locations_sf <- plot_locations_sf %>%
-    spTransform(CRS("+init=epsg:4326"))
-
-plot_locations_sf <- st_as_sf(plot_locations_sf, coords = c("STOP_LOCATION_X", "STOP_LOCATION_Y"), crs = utm18nCRS)
+```{r, fig.cap = "Spatial Points of Stop and Frisk Data (2017-2018) with Plotly and Mapbox", layout = "1-page", echo = FALSE, fig.height = 3}
+# Data Munging and Spatial Attributes for Visualization
+load(url("https://www.dropbox.com/s/mv6mgp9quu92fia/plot_locations_1718.RData?dl=1"))
+load(url("https://www.dropbox.com/s/pf5fedyiflf8x34/plot_locations_1718SF.RData?dl=1"))
 
 Sys.setenv('MAPBOX_TOKEN' = 'pk.eyJ1Ijoic2xlZTE5IiwiYSI6ImNrNDZmbWl1aTBqcmgzZW8xeDJzcTBsMXEifQ.OvJvDwdVBfB02NaJVLq7Fw')
 
-p <- plot_locations_sp %>%
+p <- plot_locations_1718 %>%
   plot_mapbox(mode = 'scattermapbox', hoverinfo='name') %>%
   layout(font = list(color='white'),
          plot_bgcolor = '#191A1A', paper_bgcolor = '#191A1A',
@@ -283,98 +89,48 @@ p <- plot_locations_sp %>%
 p
 ```
 
+This is a basic interactive scatterplot of 2017-2018 Period data created on Plotly and Mapbox. We can see that spatial points are dispersed across all of New York City boroughs. While this scatterplot allows us to see where **Stop, Question, and Frisk** practices are happening, there is no way to be certain which areas have higher rate or density of occurance. In order to resolve the issue, we created a screengrid interactive that you can zoom in and out, tilt, and move around.
+
+Basic Control Guidance for Mapbox (Mapdeck):
+- Moving: **Arrow Keys**
+- Zoom: **Scroll Wheel**
+- Tilting: **Control (Command on mac) + Shift + Arrow Keys**
+
+| Control Options  | Description                                       |
+|------------------|---------------------------------------------------|
+| Moving           | Arrow Keys                                        |
+| Zoom             | Scroll Wheels or Trackpad Zoom                    |
+| Tilt/Orientation | `Control` (`Command` on Mac) + Shift + Arrow Keys |
+
 ```{r mapdeck, layout='l-screen', fig.height=2, out.width='100%', fig.align='center', echo = FALSE} 
 mapdeck(token = "pk.eyJ1Ijoic2xlZTE5IiwiYSI6ImNrNDZmbWl1aTBqcmgzZW8xeDJzcTBsMXEifQ.OvJvDwdVBfB02NaJVLq7Fw", style = mapdeck_style("dark"), pitch = 45) %>%
-  add_screengrid(data = plot_locations_sp,
+  add_screengrid(data = plot_locations_1718,
                  weight = "weight",
                  layer_id = "screengrid_layer",
                  cell_size = 6,
                  opacity = 0.4,
                  colour_range = colourvalues::colour_values(1:6, palette = "plasma")) %>%
-  add_hexagon(data = plot_locations_sf,
+  add_hexagon(data = plot_locations_1718SF,
               layer_id = "hex_layer",
               radius = 6
               )
 ```
 
+It is also important to mention that the density is expressed by color. From the map, we can see that there are significantly more density in northern parts of and above Manhattan, such as East Harlem, Fordham, and Bronx. Since East Harlem and Fordham have significant minority population, it would be interesting to see whether race has an influence over decision-making of NYPD's Stop, Question, and Frisk practice. 
+
+You can also conduct further interaction with more data points and options with a dashboard that we created on the top.
+(NOTE: some features could take some time to render due to size of our data)
+
 ## Effect of Stop and Frisk on Crime Rates
 - Analyze stop and frisk amount as standard deviation for the year vs the change in crime amount from current to previous year, again as a standard deviation
 
-```{r, echo=FALSE, warning=FALSE}
-# Gives frame with pct, year, and count with the crime changw
-temp <- SQF2003 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-crimeAndCount <- merge(CrimeChangePercentage, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-
-temp <- SQF2004 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeChangePercentage, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2005 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeChangePercentage, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2006 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeChangePercentage, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2007 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeChangePercentage, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2008 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeChangePercentage, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2009 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeChangePercentage, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2010 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeChangePercentage, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2011 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeChangePercentage, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2012 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeChangePercentage, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2013 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeChangePercentage, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2014 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeChangePercentage, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2015 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeChangePercentage, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2016 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeChangePercentage, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2017 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeChangePercentage, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2018 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeChangePercentage, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
+```{r, layout = "1-body-outset", warning = FALSE, echo = FALSE}
+library(knitr)
+include_graphics("unnamed-chunk-8-1.png")
 ```
 
-```{r, layout = "1-body-outset", warning = FALSE, tidy=FALSE, echo = FALSE}
-# Graphing standard deviation of crime count vs standard deviation number of stop and frisks by year, and then coloring by year
-# No trend in data at all
-ggplot(crimeAndCount, mapping = aes(x = crimeChange, y = count)) + geom_point(mapping=aes(color = year)) + geom_smooth(method="lm", color="red", aes(x = crimeChange, y = count)) 
-```
-
-```{r, layout = "1-body-outset", warning = FALSE, tidy=FALSE, echo = FALSE}
-# Seperating by year in case poilicy changes had an effect, no clear trend still
-ggplot(crimeAndCount, mapping = aes(x = crimeChange, y = count)) + geom_point() + geom_smooth(method="lm", color="red", aes(x = crimeChange, y = count)) + facet_wrap(~year) 
+```{r, layout = "1-body-outset", warning = FALSE, echo = FALSE}
+include_graphics("unnamed-chunk-9-1.png")
 ```
 
 - Change wasn't related to number of stop and frisks as a whole
@@ -382,88 +138,21 @@ ggplot(crimeAndCount, mapping = aes(x = crimeChange, y = count)) + geom_point() 
 
 ## Relationship Between Crime and Stop And Frisk
 
-```{r, echo=FALSE, warning=FALSE}
-# Gives frame with pct, year, and count
-temp <- SQF2003 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-crimeAndCount <- merge(CrimeRates, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-
-temp <- SQF2004 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeRates, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2005 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeRates, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2006 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeRates, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2007 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeRates, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2008 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeRates, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2009 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeRates, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2010 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeRates, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2011 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeRates, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2012 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeRates, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2013 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeRates, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2014 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeRates, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2015 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeRates, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2016 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeRates, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2017 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeRates, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-
-temp <- SQF2018 %>% group_by(year, pct) %>% summarize(count = n()) %>% ungroup() %>% mutate(count = scale(count))
-temp <- merge(CrimeRates, temp, by.x = c("PCT", "year"), by.y = c("pct", "year"))
-crimeAndCount <- rbind(temp,crimeAndCount)
-```
-
 ```{r, layout = "1-body-outset", warning = FALSE, tidy=FALSE, echo = FALSE}
 # Graphing standard deviation of crime count vs standard deviation number of stop and frisks by year, and then coloring by year
 # No trend in data at all
-ggplot(crimeAndCount, mapping = aes(x = crimeSD, y = count)) + geom_point(mapping=aes(color = year)) + geom_smooth(method="lm", color="red", aes(x = crimeSD, y = count)) 
+include_graphics("unnamed-chunk-11-1.png") 
 ```
 
 ```{r, layout = "1-body-outset", warning = FALSE, tidy=FALSE, echo = FALSE}
 # Seperating by year in case policy changes had an effect, no clear trend still
-ggplot(crimeAndCount, mapping = aes(x = crimeSD, y = count)) + geom_point() + geom_smooth(method="lm", color="red", aes(x = crimeSD, y = count)) + facet_wrap(~year) 
+include_graphics("unnamed-chunk-12-1.png")
 ```
 
 - No trend in values or clear positive trend
 - Clearly not based on past crime rate, other factor at play?
 
 ## What Factors Actually Matter: Analysis of Effects of Change on Policy
-
 1. Splitting it into three data sets, running 2-3 different feature based regressions to see most important variables, finding average importance across each variable type and comparing
 2. Setting a binary variable to indicate which time period it was in relative to Bloomberg, see weight of that variable given in the different regression methods.
 
@@ -471,9 +160,12 @@ ggplot(crimeAndCount, mapping = aes(x = crimeSD, y = count)) + geom_point() + ge
 # Determing which columns aren't there in all the data sets, so which to drop for variable comparison
 ```
 
-## Findings and analysis
+----------------
 
+# Findings and analysis
 1. No connection between stop and frisk and changes in crime rate
 2. No connection between stop and frisk and crime of an area
 
-## Conclusion
+----------------
+
+# Conclusion
